<resources>
    <string name="app_name">E-GROWEED</string>
    <string name="app_login_welcome">WELCOME TO</string>
    <string name="user_name_label">Please enter your name</string>
    <string name="user_email_label">Please enter your email</string>
    <string name="user_password_label">Enter a password</string>
    <string name="app_login_roll_label">Select your roll</string>
    <string name="app_login_avatar_label">Select your avatar</string>
    <string name="app_profile_update">Update</string>
    <string name="app_profile_roll">Roll</string>
    <string-array name="roles">
        <item>E-grower</item>
        <item>E-grower Master</item>
    </string-array>
    <string name="user_name_input">Name</string>
    <string name="user_email_input">Email</string>
    <string name="user_password_input">Password</string>
    <string name="user_name_label_mandatory">Name *</string>
    <string name="user_password_label_mandatory">Password *</string>
    <string name="user_email_label_mandatory">Email *</string>
    <string name="avatar_accessibility_description">An avatar image</string>
    <string name="app_login_welcome_logo_description">e-groweed logo</string>
    <string name="button_register_user">Register</string>
    <string name="button_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_user_menu_fragment">Hello!</string>
    <string name="configuration_button_label_student_menu_profile">Profile</string>
    <string name="configuration_button_label_student_menu_dashboard">Dashboard</string>
    <string name="configuration_button_label_student_menu_logout">Logout</string>
    <string name="dashboard_egrower">Dashboard | E-GROWER</string>
    <string name="dashboard_egrower_master">Dashboard | E-GROWER MASTER</string>
    <string name="profile_egrower_master">Profile | E-GROWER MASTER</string>
    <string name="profile_egrower">Profile | E-GROWER </string>
</resources>