<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/button_login_loginView"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginBottom="136dp"
        android:text="@string/button_login"
        android:textColorLink="#243773"
        app:backgroundTint="#243773"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/app_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/app_login_welcome_logo_description"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/app_login_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="72dp"
        android:text="@string/app_login_welcome"
        android:textColor="#D06581"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_login_logo"
        app:layout_constraintEnd_toEndOf="@+id/app_login_logo"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="@+id/app_login_logo" />

    <TextView
        android:id="@+id/app_login_roll_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_password_input"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword_login"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword_login" />

    <EditText
        android:id="@+id/editTextTextPassword_login"
        android:layout_width="351dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints="@string/user_password_label_mandatory"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_login_loginView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail_login"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextEmail_login"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="208dp"
        android:autofillHints="@string/user_email_label_mandatory"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/button_login_loginView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/app_login_label_input"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/user_email_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail_login"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail_login"
        app:layout_constraintTop_toBottomOf="@+id/app_login_logo"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>